--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Wired.js</h1>
     <p>Wired.js is an all-new in-development Discord library to power your hopes and dreams</p>
     <p><a href="/wired-js/1.0.0/">Documentation (WIP)</a></p>
+    <iframe src="https://discord.com/widget?id=780272539854438431&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </body>
 </html>
